k8s/coma/apps/authentik/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: authentik
  namespace: authentik
spec:
  parentRefs:
    - name: web-gateway
      namespace: kube-system
      sectionName: artichoke-cc-https
  hostnames:
    - auth.artichoke.cc
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: authentik-server
          port: 80
