k8s/coma/apps/authentik/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: authentik
  namespace: authentik
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    traefik.ingress.kubernetes.io/router.middlewares: default/https-redirect@kubernetescrd,default/hsts@kubernetescrd
spec:
  rules:
    - host: "auth.artichoke.cc"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: authentik-server
                port:
                  number: 80
  tls:
    - hosts:
        - "auth.artichoke.cc"
      secretName: artichokecc-cert
